samples/_failures_safe/1761155459_02d869_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f519fe05.c: In function ‘parser_init’:
./samples/SAFE/__tmp_f519fe05.c:152:11: error: expected ‘;’ at end of input
  152 |     parser
      |           ^
      |           ;
./samples/SAFE/__tmp_f519fe05.c:152:5: error: expected declaration or statement at end of input
  152 |     parser
      |     ^~~~~~
